Fix Overflow
Fix Overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,6 @@
 
 body {
   background-color: #0d0f26;
-  overflow-x: hidden;
 }
 
 @layer utilities {
